[package]
name = "libp2p-kad-record-store-redis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.39", default-features = false, features = ["kad"]}
redis = "0.21.0"
anyhow = "1.0.42"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_millis = "0.1.1"
bincode = "1.3.3"